# tauri-hotkey-rs

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: lib.rs
tauri-hotkey-sys/: CHANGELOG.md  Cargo.toml  build.rs
tauri-hotkey-sys/Source/: lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
