[dependencies]
log = "0.4"
once_cell = "1.7"
serde = { version = "1.0", features = [ "derive" ] }
strum = "0.21"
strum_macros = "0.21"
tauri-hotkey-sys = { path = "./tauri-hotkey-sys/", version = "0.1.0" }
thiserror = "1"

[lib]
path = "Source/lib.rs"

[package]
authors = [
  "Karl Skomski <karl@skomski.com>",
  "Lucas Nogueira <lucas@tauri.studio>"
]
description = "Cross platform global hotkey API"
edition = "2018"
exclude = [ "/tauri-hotkey-sys/" ]
license-file = "LICENSE"
name = "tauri-hotkey"
repository = "https://github.com/tauri-apps/tauri-hotkey-rs"
version = "0.1.2"
